glassbox initial implementation
Signed-off-by: Test User <test@example.com>